/**
 * Snapshot tests for ORM model-generator.ts
 *
 * Tests the generated model classes with findMany, findFirst, create, update, delete methods.
 */
import { generateModelFile } from '../../core/codegen/orm/model-generator';
import type {
  FieldType,
  Relations,
  Table,
} from '../../types/schema';

// ============================================================================
// Test Fixtures
// ============================================================================

const fieldTypes = {
  uuid: { gqlType: 'UUID', isArray: false } as FieldType,
  string: { gqlType: 'String', isArray: false } as FieldType,
  int: { gqlType: 'Int', isArray: false } as FieldType,
  boolean: { gqlType: 'Boolean', isArray: false } as FieldType,
  datetime: { gqlType: 'Datetime', isArray: false } as FieldType,
};

const emptyRelations: Relations = {
  belongsTo: [],
  hasOne: [],
  hasMany: [],
  manyToMany: [],
};

function createTable(
  partial: Partial<Table> & { name: string },
): Table {
  return {
    name: partial.name,
    fields: partial.fields ?? [],
    relations: partial.relations ?? emptyRelations,
    query: partial.query,
    inflection: partial.inflection,
    constraints: partial.constraints,
    subscription: partial.subscription,
  };
}

// ============================================================================
// Tests
// ============================================================================

describe('model-generator', () => {
  it('generates model with all CRUD methods', () => {
    const table = createTable({
      name: 'User',
      fields: [
        { name: 'id', type: fieldTypes.uuid },
        { name: 'email', type: fieldTypes.string },
        { name: 'name', type: fieldTypes.string },
        { name: 'isActive', type: fieldTypes.boolean },
        { name: 'createdAt', type: fieldTypes.datetime },
      ],
      query: {
        all: 'users',
        one: 'user',
        create: 'createUser',
        update: 'updateUser',
        delete: 'deleteUser',
      },
    });

    const result = generateModelFile(table, false);

    expect(result.fileName).toBe('user.ts');
    expect(result.modelName).toBe('UserModel');
    expect(result.content).toMatchSnapshot();
  });

  it('generates model without update/delete when not available', () => {
    const table = createTable({
      name: 'AuditLog',
      fields: [
        { name: 'id', type: fieldTypes.uuid },
        { name: 'action', type: fieldTypes.string },
        { name: 'timestamp', type: fieldTypes.datetime },
      ],
      query: {
        all: 'auditLogs',
        one: 'auditLog',
        create: 'createAuditLog',
        update: undefined,
        delete: undefined,
      },
    });

    const result = generateModelFile(table, false);

    expect(result.content).toMatchSnapshot();
    expect(result.content).toContain('findMany');
    expect(result.content).toContain('findFirst');
    expect(result.content).toContain('create');
    expect(result.content).not.toContain('update(');
    expect(result.content).not.toContain('delete(');
  });

  it('generates typed subscribe method when subscription metadata exists', () => {
    const table = createTable({
      name: 'Contact',
      fields: [
        { name: 'id', type: fieldTypes.uuid },
        { name: 'email', type: fieldTypes.string },
      ],
      query: {
        all: 'contacts',
        one: 'contact',
        create: 'createContact',
        update: 'updateContact',
        delete: 'deleteContact',
      },
      subscription: {
        fieldName: 'onContactChanged',
        payloadTypeName: 'ContactSubscriptionPayload',
        rowFieldName: 'contact',
        payloadMetaFields: ['event', 'rowId', 'overflow'],
        args: [
          {
            name: 'ids',
            type: {
              kind: 'LIST',
              name: null,
              ofType: {
                kind: 'NON_NULL',
                name: null,
                ofType: { kind: 'SCALAR', name: 'UUID' },
              },
            },
          },
        ],
      },
    });

    const result = generateModelFile(table, false);

    expect(result.content).toContain('subscribe<S extends ContactSelect>');
    expect(result.content).toContain('buildSubscriptionDocument');
    expect(result.content).toContain('"onContactChanged"');
    expect(result.content).toContain('ids?: string[]');
    expect(result.content).toContain('SubscriptionEvent<InferSelectResult<ContactWithRelations, S>>');
    expect(result.content).toContain('this.client.subscribe<InferSelectResult<ContactWithRelations, S>>');
    expect(result.content).toMatchSnapshot();
  });

  it('handles custom query/mutation names', () => {
    const table = createTable({
      name: 'Organization',
      fields: [
        { name: 'id', type: fieldTypes.uuid },
        { name: 'name', type: fieldTypes.string },
      ],
      query: {
        all: 'allOrganizations',
        one: 'organizationById',
        create: 'registerOrganization',
        update: 'modifyOrganization',
        delete: 'removeOrganization',
      },
    });

    const result = generateModelFile(table, false);

    expect(result.content).toMatchSnapshot();
    expect(result.content).toContain('"allOrganizations"');
    expect(result.content).toContain('"registerOrganization"');
    expect(result.content).toContain('"modifyOrganization"');
    expect(result.content).toContain('"removeOrganization"');
  });

  it('generates findOne via collection query when single lookup is unavailable', () => {
    const table = createTable({
      name: 'Account',
      fields: [
        { name: 'id', type: fieldTypes.uuid },
        { name: 'name', type: fieldTypes.string },
      ],
      query: {
        all: 'accounts',
        one: null,
        create: 'createAccount',
        update: 'updateAccount',
        delete: 'deleteAccount',
      },
    });

    const result = generateModelFile(table, false);

    expect(result.content).toContain('findOne<S extends AccountSelect>(');
    expect(result.content).toContain(
      'buildFindManyDocument("Account", "accounts", args.select',
    );
    expect(result.content).toContain('"account": data.accounts?.nodes?.[0] ?? null');
  });

  it('generates findOne via collection fallback for all entities when no single query fields exist', () => {
    // Simulates NoUniqueLookupPreset: query.one is null for every entity
    const tables = [
      createTable({
        name: 'User',
        fields: [
          { name: 'id', type: fieldTypes.uuid },
          { name: 'email', type: fieldTypes.string },
        ],
        query: {
          all: 'users',
          one: null,
          create: 'createUser',
          update: 'updateUser',
          delete: 'deleteUser',
        },
      }),
      createTable({
        name: 'Post',
        fields: [
          { name: 'id', type: fieldTypes.uuid },
          { name: 'title', type: fieldTypes.string },
        ],
        query: {
          all: 'posts',
          one: null,
          create: 'createPost',
          update: 'updatePost',
          delete: 'deletePost',
        },
      }),
    ];

    for (const table of tables) {
      const result = generateModelFile(table, false);
      const lcName = table.name.charAt(0).toLowerCase() + table.name.slice(1);

      // Should use collection fallback for findOne
      expect(result.content).toContain(`findOne<S extends ${table.name}Select>(`);
      expect(result.content).toContain(
        `buildFindManyDocument("${table.name}", "${table.query!.all}", args.select`,
      );
      // findOne should use transform pattern (collection → single result)
      expect(result.content).toContain(
        `"${lcName}": data.${table.query!.all}?.nodes?.[0] ?? null`,
      );
    }
  });

  it('generates correct type imports', () => {
    const table = createTable({
      name: 'Product',
      fields: [
        { name: 'id', type: fieldTypes.uuid },
        { name: 'name', type: fieldTypes.string },
        { name: 'price', type: fieldTypes.int },
      ],
      query: {
        all: 'products',
        one: 'product',
        create: 'createProduct',
        update: 'updateProduct',
        delete: 'deleteProduct',
      },
    });

    const result = generateModelFile(table, false);

    // Check imports
    expect(result.content).toContain('from "../client"');
    expect(result.content).toContain('from "../query-builder"');
    expect(result.content).toContain('from "../select-types"');
    expect(result.content).toContain('from "../input-types"');

    // Check type references
    expect(result.content).toContain('ProductSelect');
    expect(result.content).toContain('ProductFilter');
    expect(result.content).toContain('ProductsOrderBy');
    expect(result.content).toContain('CreateProductInput');
    expect(result.content).toContain('UpdateProductInput');
    expect(result.content).toContain('ProductPatch');
  });

  it('does not include Condition type in findMany or findFirst', () => {
    const table = createTable({
      name: 'Contact',
      fields: [
        { name: 'id', type: fieldTypes.uuid },
        { name: 'name', type: fieldTypes.string },
      ],
      query: {
        all: 'contacts',
        one: 'contact',
        create: 'createContact',
        update: 'updateContact',
        delete: 'deleteContact',
      },
    });

    const result = generateModelFile(table, false);

    // Condition type should NOT be imported or referenced
    expect(result.content).not.toContain('ContactCondition');
    expect(result.content).not.toContain('condition');
  });
});
