// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`model-generator generates model with all CRUD methods 1`] = `
"/**
 * User model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildFindOneDocument, buildCreateDocument, buildUpdateByPkDocument, buildDeleteByPkDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, StrictSelect } from "../select-types";
import type { UserWithRelations, UserSelect, UserFilter, UsersOrderBy, CreateUserInput, UserPatch } from "../input-types";
import { connectionFieldsMap } from "../input-types";
export class UserModel {
  constructor(private client: OrmClient) {}
  findMany<S extends UserSelect>(args: FindManyArgs<S, UserFilter, UsersOrderBy> & {
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    users: ConnectionResult<InferSelectResult<UserWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("User", "users", args.select, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "UserFilter", "UsersOrderBy", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "User",
      fieldName: "users",
      document,
      variables
    });
  }
  findFirst<S extends UserSelect>(args: FindFirstArgs<S, UserFilter, UsersOrderBy> & {
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    user: InferSelectResult<UserWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("User", "users", args.select, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined
    }, "UserFilter", "UsersOrderBy", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "User",
      fieldName: "user",
      document,
      variables,
      transform: (data: {
        users?: {
          nodes?: InferSelectResult<UserWithRelations, S>[];
        };
      }) => ({
        "user": data.users?.nodes?.[0] ?? null
      })
    });
  }
  findOne<S extends UserSelect>(args: {
    id: string;
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    user: InferSelectResult<UserWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindOneDocument("User", "user", args.id, args.select, "id", "UUID!", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "User",
      fieldName: "user",
      document,
      variables
    });
  }
  create<S extends UserSelect>(args: CreateArgs<S, CreateUserInput["user"]> & {
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    createUser: {
      user: InferSelectResult<UserWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("User", "createUser", "user", args.select, args.data, "CreateUserInput", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "createUser",
      document,
      variables
    });
  }
  update<S extends UserSelect>(args: UpdateArgs<S, {
    id: string;
  }, UserPatch> & {
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    updateUser: {
      user: InferSelectResult<UserWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildUpdateByPkDocument("User", "updateUser", "user", args.select, args.where.id, args.data, "UpdateUserInput", "id", "userPatch", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "updateUser",
      document,
      variables
    });
  }
  delete<S extends UserSelect>(args: DeleteArgs<{
    id: string;
  }, S> & {
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    deleteUser: {
      user: InferSelectResult<UserWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildDeleteByPkDocument("User", "deleteUser", "user", {
      id: args.where.id
    }, "DeleteUserInput", args.select, connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "deleteUser",
      document,
      variables
    });
  }
}"
`;

exports[`model-generator generates model without update/delete when not available 1`] = `
"/**
 * AuditLog model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildFindOneDocument, buildCreateDocument, buildUpdateByPkDocument, buildDeleteByPkDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, StrictSelect } from "../select-types";
import type { AuditLogWithRelations, AuditLogSelect, AuditLogFilter, AuditLogsOrderBy, CreateAuditLogInput, AuditLogPatch } from "../input-types";
import { connectionFieldsMap } from "../input-types";
export class AuditLogModel {
  constructor(private client: OrmClient) {}
  findMany<S extends AuditLogSelect>(args: FindManyArgs<S, AuditLogFilter, AuditLogsOrderBy> & {
    select: S;
  } & StrictSelect<S, AuditLogSelect>): QueryBuilder<{
    auditLogs: ConnectionResult<InferSelectResult<AuditLogWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("AuditLog", "auditLogs", args.select, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "AuditLogFilter", "AuditLogsOrderBy", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "AuditLog",
      fieldName: "auditLogs",
      document,
      variables
    });
  }
  findFirst<S extends AuditLogSelect>(args: FindFirstArgs<S, AuditLogFilter, AuditLogsOrderBy> & {
    select: S;
  } & StrictSelect<S, AuditLogSelect>): QueryBuilder<{
    auditLog: InferSelectResult<AuditLogWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("AuditLog", "auditLogs", args.select, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined
    }, "AuditLogFilter", "AuditLogsOrderBy", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "AuditLog",
      fieldName: "auditLog",
      document,
      variables,
      transform: (data: {
        auditLogs?: {
          nodes?: InferSelectResult<AuditLogWithRelations, S>[];
        };
      }) => ({
        "auditLog": data.auditLogs?.nodes?.[0] ?? null
      })
    });
  }
  findOne<S extends AuditLogSelect>(args: {
    id: string;
    select: S;
  } & StrictSelect<S, AuditLogSelect>): QueryBuilder<{
    auditLog: InferSelectResult<AuditLogWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindOneDocument("AuditLog", "auditLog", args.id, args.select, "id", "UUID!", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "AuditLog",
      fieldName: "auditLog",
      document,
      variables
    });
  }
  create<S extends AuditLogSelect>(args: CreateArgs<S, CreateAuditLogInput["auditLog"]> & {
    select: S;
  } & StrictSelect<S, AuditLogSelect>): QueryBuilder<{
    createAuditLog: {
      auditLog: InferSelectResult<AuditLogWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("AuditLog", "createAuditLog", "auditLog", args.select, args.data, "CreateAuditLogInput", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "AuditLog",
      fieldName: "createAuditLog",
      document,
      variables
    });
  }
}"
`;

exports[`model-generator generates typed subscribe method when subscription metadata exists 1`] = `
"/**
 * Contact model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import type { SubscriptionEvent, SubscriptionFieldMeta, Unsubscribe } from "../client";
import { subscribeAsAsyncIterable } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildFindOneDocument, buildCreateDocument, buildUpdateByPkDocument, buildDeleteByPkDocument, buildSubscriptionDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, StrictSelect } from "../select-types";
import type { ContactWithRelations, ContactSelect, ContactFilter, ContactsOrderBy, CreateContactInput, ContactPatch } from "../input-types";
import { connectionFieldsMap } from "../input-types";
export class ContactModel {
  constructor(private client: OrmClient) {}
  findMany<S extends ContactSelect>(args: FindManyArgs<S, ContactFilter, ContactsOrderBy> & {
    select: S;
  } & StrictSelect<S, ContactSelect>): QueryBuilder<{
    contacts: ConnectionResult<InferSelectResult<ContactWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("Contact", "contacts", args.select, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "ContactFilter", "ContactsOrderBy", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Contact",
      fieldName: "contacts",
      document,
      variables
    });
  }
  findFirst<S extends ContactSelect>(args: FindFirstArgs<S, ContactFilter, ContactsOrderBy> & {
    select: S;
  } & StrictSelect<S, ContactSelect>): QueryBuilder<{
    contact: InferSelectResult<ContactWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("Contact", "contacts", args.select, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined
    }, "ContactFilter", "ContactsOrderBy", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Contact",
      fieldName: "contact",
      document,
      variables,
      transform: (data: {
        contacts?: {
          nodes?: InferSelectResult<ContactWithRelations, S>[];
        };
      }) => ({
        "contact": data.contacts?.nodes?.[0] ?? null
      })
    });
  }
  findOne<S extends ContactSelect>(args: {
    id: string;
    select: S;
  } & StrictSelect<S, ContactSelect>): QueryBuilder<{
    contact: InferSelectResult<ContactWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindOneDocument("Contact", "contact", args.id, args.select, "id", "UUID!", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Contact",
      fieldName: "contact",
      document,
      variables
    });
  }
  create<S extends ContactSelect>(args: CreateArgs<S, CreateContactInput["contact"]> & {
    select: S;
  } & StrictSelect<S, ContactSelect>): QueryBuilder<{
    createContact: {
      contact: InferSelectResult<ContactWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("Contact", "createContact", "contact", args.select, args.data, "CreateContactInput", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Contact",
      fieldName: "createContact",
      document,
      variables
    });
  }
  update<S extends ContactSelect>(args: UpdateArgs<S, {
    id: string;
  }, ContactPatch> & {
    select: S;
  } & StrictSelect<S, ContactSelect>): QueryBuilder<{
    updateContact: {
      contact: InferSelectResult<ContactWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildUpdateByPkDocument("Contact", "updateContact", "contact", args.select, args.where.id, args.data, "UpdateContactInput", "id", "contactPatch", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Contact",
      fieldName: "updateContact",
      document,
      variables
    });
  }
  delete<S extends ContactSelect>(args: DeleteArgs<{
    id: string;
  }, S> & {
    select: S;
  } & StrictSelect<S, ContactSelect>): QueryBuilder<{
    deleteContact: {
      contact: InferSelectResult<ContactWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildDeleteByPkDocument("Contact", "deleteContact", "contact", {
      id: args.where.id
    }, "DeleteContactInput", args.select, connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Contact",
      fieldName: "deleteContact",
      document,
      variables
    });
  }
  subscribe<S extends ContactSelect>(args: {
    select: S;
    ids?: string[];
    onEvent: (event: SubscriptionEvent<InferSelectResult<ContactWithRelations, S>>) => void;
    onError?: (error: Error) => void;
    onComplete?: () => void;
  } & StrictSelect<S, ContactSelect>): Unsubscribe {
    const meta: SubscriptionFieldMeta = {
      fieldName: "onContactChanged",
      tableName: "contact",
      dataFieldName: "contact"
    };
    const {
      document,
      variables
    } = buildSubscriptionDocument("Contact", "onContactChanged", "contact", ["event", "rowId", "overflow"], args.select, {
      ids: args.ids
    }, [{
      name: "ids",
      type: "[UUID!]"
    }], connectionFieldsMap);
    return this.client.subscribe<InferSelectResult<ContactWithRelations, S>>(meta, document, variables, {
      onEvent: args.onEvent,
      onError: args.onError,
      onComplete: args.onComplete
    });
  }
  events<S extends ContactSelect>(args: {
    select: S;
    ids?: string[];
    signal?: AbortSignal;
  } & StrictSelect<S, ContactSelect>): AsyncIterableIterator<SubscriptionEvent<InferSelectResult<ContactWithRelations, S>>> {
    return subscribeAsAsyncIterable(callbacks => this.subscribe({
      ...args,
      ...callbacks
    }), args.signal);
  }
}"
`;

exports[`model-generator handles custom query/mutation names 1`] = `
"/**
 * Organization model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildFindOneDocument, buildCreateDocument, buildUpdateByPkDocument, buildDeleteByPkDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, StrictSelect } from "../select-types";
import type { OrganizationWithRelations, OrganizationSelect, OrganizationFilter, OrganizationsOrderBy, CreateOrganizationInput, OrganizationPatch } from "../input-types";
import { connectionFieldsMap } from "../input-types";
export class OrganizationModel {
  constructor(private client: OrmClient) {}
  findMany<S extends OrganizationSelect>(args: FindManyArgs<S, OrganizationFilter, OrganizationsOrderBy> & {
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    allOrganizations: ConnectionResult<InferSelectResult<OrganizationWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("Organization", "allOrganizations", args.select, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "OrganizationFilter", "OrganizationsOrderBy", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Organization",
      fieldName: "allOrganizations",
      document,
      variables
    });
  }
  findFirst<S extends OrganizationSelect>(args: FindFirstArgs<S, OrganizationFilter, OrganizationsOrderBy> & {
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    organization: InferSelectResult<OrganizationWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("Organization", "allOrganizations", args.select, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined
    }, "OrganizationFilter", "OrganizationsOrderBy", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Organization",
      fieldName: "organization",
      document,
      variables,
      transform: (data: {
        allOrganizations?: {
          nodes?: InferSelectResult<OrganizationWithRelations, S>[];
        };
      }) => ({
        "organization": data.allOrganizations?.nodes?.[0] ?? null
      })
    });
  }
  findOne<S extends OrganizationSelect>(args: {
    id: string;
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    organization: InferSelectResult<OrganizationWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindOneDocument("Organization", "organizationById", args.id, args.select, "id", "UUID!", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Organization",
      fieldName: "organization",
      document,
      variables
    });
  }
  create<S extends OrganizationSelect>(args: CreateArgs<S, CreateOrganizationInput["organization"]> & {
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    registerOrganization: {
      organization: InferSelectResult<OrganizationWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("Organization", "registerOrganization", "organization", args.select, args.data, "CreateOrganizationInput", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "registerOrganization",
      document,
      variables
    });
  }
  update<S extends OrganizationSelect>(args: UpdateArgs<S, {
    id: string;
  }, OrganizationPatch> & {
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    modifyOrganization: {
      organization: InferSelectResult<OrganizationWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildUpdateByPkDocument("Organization", "modifyOrganization", "organization", args.select, args.where.id, args.data, "UpdateOrganizationInput", "id", "organizationPatch", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "modifyOrganization",
      document,
      variables
    });
  }
  delete<S extends OrganizationSelect>(args: DeleteArgs<{
    id: string;
  }, S> & {
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    removeOrganization: {
      organization: InferSelectResult<OrganizationWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildDeleteByPkDocument("Organization", "removeOrganization", "organization", {
      id: args.where.id
    }, "RemoveOrganizationInput", args.select, connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "removeOrganization",
      document,
      variables
    });
  }
}"
`;
